fix(modal-native): increasing spacing for sticky option

--- a/tegel/src/components/modal/modal.scss
+++ b/tegel/src/components/modal/modal.scss
@@ -173,7 +173,7 @@ $modals: (
     .sdds-modal-body {
       font: var(--sdds-body-01);
       letter-spacing: var(--sdds-body-01-ls);
-      padding-bottom: 40px;
+      padding-bottom: 96px;
       margin: 0 -16px 0 0;
       max-height: calc(85vh - 36px);
       overflow-y: auto;
